fixed the pattern stretch issue

--- a/src/style/indexPage/events.scss
+++ b/src/style/indexPage/events.scss
@@ -1,25 +1,9 @@
 @import "./../var.scss";
 @import "./../frosty.scss";
+@import "./../patternBackground.scss";
 #events {
     position: relative;
-    .background {
-        position: absolute;
-        img{
-            position: absolute;
-            width: 100vw;
-            height: 100vh;
-            z-index: -3;
-        }
-        .hue {
-            background-color: $darkGreen;
-            width: 100vw;
-            height: 100vh;
-            position: absolute;
-            z-index: -2;
-            opacity: 0.85;
-        }
-    }
-
+    @include patternBackground($darkGreen);
     .content {
         width: 80vw;
         height: 80vh;
